--- a/SecondPractice/app/src/main/res/values/strings.xml
+++ b/SecondPractice/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FirstPractice</string>
+    <string name="app_name">SecondPractice</string>
 
     <!--  Splash screen  -->
     <string name="app_version">v1.1.0</string>
@@ -10,10 +10,9 @@
     <string name="login_title">Inicio de sesión</string>
     <string name="prompt_email">Correo</string>
     <string name="prompt_password">Contraseña</string>
-    <string name="action_sign_in">Iniciar sesión</string>
-    <string name="invalid_username">Usuario no válido</string>
-    <string name="invalid_password">Contraseña inválida</string>
-    <string name="login_failed">"Error al iniciar sesión"</string>
+    <string name="action_log_in">Iniciar sesión</string>
+    <string name="action_sign_in">Registrarse</string>
+    <string name="action_recover_pass">¿Olvidaste tu contraseña?</string>
 
     <!--  Catalog screen  -->
     <string name="catalog_title">Catálogo</string>
